--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -6,15 +6,15 @@
 // Just add your color code here, compile the theme.scss file to change this color everywhere
 
 //Colors
-$brand-primary:         #f58634; // Orange
-$brand-secondary:	#000000; // Brand Secondary Color
-$brand-tertiary:	#ff0000; // Brand Tertiary Color
-$body-font-color:	#333;
+$maroon: #6B0005;
+$dark-grey: #262626;
+$white: #FFFFFF;
+$facebook: #3B5998;
+$twitter: #0084B4;
+$linkedin: #0E76A8;
 
 //Fonts
-$header-font:       'Fjalla One', sans-serif;
-$body-font:         'Open Sans', sans-serif;
-$nav-font:          'Roboto', sans-serif;
+$pt-sans: 'PT Sans', sans-serif;
 
 //Fluid Typography Variables
 $min_width: 320px;
@@ -26,75 +26,12 @@ $max_font: 18px;
 $mod_1: 1.2; // mobile
 $mod_2: 1.5; // desktop
 
-
-
-
-
-//Mix-Ins
-
-//All Headings
-
-@mixin headings {
-    h1, h2, h3,
-    h4, h5, h6 {
-        @content;
-    }
-}
-
-//Text Shadow
-@mixin text-shadow {
-    text-shadow: 0 0 15px #000;
-}
-
 //Drop Shadow
 @mixin shadow {
-  -webkit-box-shadow: 0 8px 6px -6px rgba(0,0,0,.3);
-	-moz-box-shadow: 0 8px 6px -6px rgba(0,0,0,.3);
-	box-shadow: 0 8px 6px -6px rgba(0,0,0,.3);
-}
-
-//Border Radius
-@mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-     -moz-border-radius: $radius;
-      -ms-border-radius: $radius;
-          border-radius: $radius;
-}
-
-//Transitions
-@mixin transition($transition...) {
-    -moz-transition:    $transition;
-    -o-transition:      $transition;
-    -webkit-transition: $transition;
-    transition:         $transition;
-}
-@mixin transition-property($property...) {
-    -moz-transition-property:    $property;
-    -o-transition-property:      $property;
-    -webkit-transition-property: $property;
-    transition-property:         $property;
-}
-@mixin transition-duration($duration...) {
-    -moz-transition-property:    $duration;
-    -o-transition-property:      $duration;
-    -webkit-transition-property: $duration;
-    transition-property:         $duration;
-}
-@mixin transition-timing-function($timing...) {
-    -moz-transition-timing-function:    $timing;
-    -o-transition-timing-function:      $timing;
-    -webkit-transition-timing-function: $timing;
-    transition-timing-function:         $timing;
-}
-@mixin transition-delay($delay...) {
-    -moz-transition-delay:    $delay;
-    -o-transition-delay:      $delay;
-    -webkit-transition-delay: $delay;
-    transition-delay:         $delay;
+  box-shadow: 0 8px 6px -6px #999;
 }
 
 //Typography
-
 @function strip-unit($value) {
   @return $value / ($value * 0 + 1);
 }
