--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -14,11 +14,12 @@ Template:    Understrap
 
 html {
   @include fluid-type($min_width, $max_width, $min_font, $max_font);
+  scroll-behavior: smooth;
 }
 
 h1, h2, h3, h4, h5 {
-	color: $brand-primary;
-	font-family: $header-font;
+	color: $maroon;
+	font-family: $pt-sans;
 }
 
 h1 {  
@@ -35,18 +36,36 @@ h3 {
 }
 
 body {
-	color: #dedede;
-	font-family: $body-font;
+	color: #000;
+	font-family: $pt-sans;
 }
 
 /*------------------------------------------------*/
 /*--------------------[LINKS]---------------------*/
 /*------------------------------------------------*/
 
+a {
+	color: $maroon;
+	&:hover {
+		text-decoration: none;
+	}
+}
+
 .current_page_item {
 	a {
-		color: $brand-primary;
+		color: $white;
 	}
+}
+
+#main-menu {
+	a {
+		font-family: $pt-sans;
+		color: $maroon;
+	}
+}
+
+.mobileToggle {
+	color: $maroon;
 }
 
 /*------------------------------------------------*/
@@ -54,56 +73,118 @@ body {
 /*------------------------------------------------*/
 
 .btn-primary {
-	font-family: $body-font;
+	font-family: $pt-sans ;
 	text-transform: uppercase;
-	color: #fff !important;
-	background-color: $brand-primary !important;
-	border-color: $brand-primary !important;
+	color: $white !important;
+	background-color: $maroon !important;
+	border: 0;
 	@include border-radius(5px);
 }
 			
 .btn-primary {
 	&:hover {
-		background-color: lighten( $brand-primary, 10% ) !important;
-		border-color: $brand-primary !important;
+		background-color: lighten( $maroon, 10% ) !important;
+		border: 0;
    	}
   }
 
 /*------------------------------------------------*/
+/*-------------------[GENERAL]--------------------*/
+/*------------------------------------------------*/
+.social-link {
+	color: $white;
+	text-decoration: none !important;
+	i {
+		display: flex;
+	    padding: 15px;
+	    height: 30px;
+	    width: 30px;
+	    border-radius: 50%;
+	    justify-content: center;
+	    align-items: center;
+	    font-size: 16px;
+	}	
+}
+
+/*------------------------------------------------*/
 /*--------------------[HEADER]--------------------*/
 /*------------------------------------------------*/
-
+header {
+	.facebook i {
+		background-color: $facebook;
+	}
+	.twitter i {
+		background-color: $twitter;
+	}
+	.linkedin i {
+		background-color: $linkedin;
+	}
+}
+.wrapper-navbar {
+	background-color: $maroon;
+}
 #navbarNavDropdown {
-	justify-content: flex-end;
+	#main-menu {
+		a {
+			color: $white;
+		}
+		.dropdown-menu {
+			border: 2px solid $maroon;
+			border-radius: 0;
+			top: 52px;
+			margin-top: 0;
+			a {
+				color: $maroon;
+				&:after {
+					content: '';
+					display: block;
+					height: 2px;
+					margin-top: 5px;
+					background-color: #D4D4D4;
+				}
+			}
+			.menu-item:last-of-type {
+				a {
+					&:after {
+						content: none;
+					}
+				}
+			}
+			.dropdown-item {
+				&:focus, &:hover {
+					background-color: transparent;	
+				}
+			}
+		}
+	}
 }
 
 /*------------------------------------------------*/
-/*-------------------[MENU]-----------------------*/
+/*---------------------[FOOTER]-------------------*/
 /*------------------------------------------------*/
 
-.mobileToggle {
-	color: $brand-primary;
+footer {
+	padding: 50px 0;
+	background-color: $dark-grey;
+	color: $white;
+	a {
+		color: $white;
+		text-decoration: underline;
+	}
+	.social-link {
+		color: $maroon;
+		i {
+			height: 45px;
+			width: 45px;
+			font-size: 24px;
+			background-color: $white;
+		}	
+	}
 }
 
 /*------------------------------------------------*/
-/*----------------------[PAGES]-------------------*/
+/*--------------------[PAGES]---------------------*/
 /*------------------------------------------------*/
-
-
-/*------------------------------------------------*/
-/*--------------------[SIDEBAR]-------------------*/
-/*------------------------------------------------*/
-
-/*------------------------------------------------*/
-/*----------------------[ACF]---------------------*/
-/*------------------------------------------------*/
-
-.acf-map {
-    width: 100%;
-    height: 400px;
-    border: #ccc solid 1px;
-    margin: 20px 0;
-}
 
 /*------------------------------------------------*/
 /*--------------------[FORMS]-------------------*/
@@ -113,111 +194,34 @@ body {
 	.nf-form-fields-required {
 		display: none;
 	}
-
-	.fName {
-		float: left;
-		width: 48%;
-		margin-right: 2%;
-		clear: none;
-
-		@include media-breakpoint-down(md) { float: none; width: 100%; margin-right: 0; clear: both; }
+	label {
+		font-family: $pt-sans;
+		font-weight: normal !important;
+		text-transform: uppercase;
 	}
-
-	.lName {
-		float: left;
-		width: 48%;
-		clear: none;
-
-		@include media-breakpoint-down(md) { float: none; width: 100%; clear: both; }
+	.ninja-forms-req-symbol, .nf-error-msg {
+		color: $maroon !important;
 	}
-
-	::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-	  font-family: $header-font;
-	  font-size: 12px;
+	.nf-error-msg {
+		margin-bottom: 25px;
 	}
-	::-moz-placeholder { /* Firefox 19+ */
-	  font-family: $header-font;
-	  font-size: 12px;
+	.nf-response-msg {
+	    border: solid 1px $maroon;
+	    padding: 10px 25px;
+	    margin-bottom: 15px;
+	    border-radius: 5px;
+	    p:last-of-type {
+	    	margin-bottom: 0;
+	    }
 	}
-	:-ms-input-placeholder { /* IE 10+ */
-	 font-family: $header-font;
-	 font-size: 12px;
-	}
-	:-moz-placeholder { /* Firefox 18- */
-	  font-family: $header-font;
-	  font-size: 12px;
+	input:not([type="button"]), textarea {
+		padding: 10px 15px;
+		border-color: $maroon;
+		border-width: 1px;
+		border-radius: 5px;
+		border-style: solid;
 	}
 }
-
-.g-recaptcha, #rc-imageselect {
-	@include media-breakpoint-down(sm) { 
-		transform:scale(0.77);
-		-webkit-transform:scale(0.77);
-		transform-origin:0 0;
-		-webkit-transform-origin:0 0;
-	 }
-}
-
-
-/*------------------------------------------------*/
-/*---------------------[FOOTER]-------------------*/
-/*------------------------------------------------*/
-
-#wrapper-footer {
-	color: $brand-secondary;
-	padding-top: 0;
-	padding-bottom: 0;
-	text-transform: uppercase;
-	font-size: 12px;
-
-	#footerWidgets {
-		padding: 50px 0;
-	}
-
-	h5 {
-			padding-bottom: 5px;
-		    border-bottom: solid 2px;
-		    text-transform: uppercase;
-		    color: $brand-primary
-		}
-
-	ul {
-		padding-left: 0;
-		list-style: none;
-
-		li {
-			margin-bottom: 5px;
-
-			a {
-				color: $brand-primary;
-				text-transform: uppercase;
-				font-size: 12px;
-
-				&:hover {
-					text-decoration: none;
-				}
-			}
-		}
-	}
-}
-
-#bottomFooter {
-	background-color: $brand-primary;
-	color: #fff;
-	padding-top: 25px;
-	padding-bottom: 25px;
-	box-shadow: inset 0 20px 30px -15px rgba(0, 0, 0, 0.50);
-	-webkit-box-shadow: inset 0 20px 30px -15px rgba(0, 0, 0, 0.50);
-
-	a {
-		color: #fff;
-
-		&:hover {
-			text-decoration: none;
-		}
-	}
-}
-
 /*------------------------------------------------*/
 /*--------------[RESPONSIVE/UTILITIES]------------*/
 /*------------------------------------------------*/
@@ -238,7 +242,3 @@ body {
 @include media-breakpoint-only(md) {  }
 @include media-breakpoint-only(lg) {  }
 @include media-breakpoint-only(xl) {  }
-
-.hidden {
-	display: none;
-}
