--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10795,7 +10795,7 @@ html {
       html {
         font-size: 18px; } }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
   color: #6B0005;
   font-family: "PT Sans", sans-serif; }
 
@@ -10857,17 +10857,17 @@ a {
 /*------------------------------------------------*/
 /*-------------------[BUTTONS]--------------------*/
 /*------------------------------------------------*/
-.btn-primary {
+.maroon-button {
   font-family: "PT Sans", sans-serif;
   text-transform: uppercase;
   color: #FFFFFF !important;
   background-color: #6B0005 !important;
   border: 0;
-  border-radius: 5px; }
-
-.btn-primary:hover {
-  background-color: #9e0007 !important;
-  border: 0; }
+  border-radius: 5px;
+  padding: 10px 25px; }
+  .maroon-button:hover {
+    background-color: #380003 !important;
+    border: 0; }
 
 /*------------------------------------------------*/
 /*-------------------[GENERAL]--------------------*/
@@ -10982,6 +10982,9 @@ footer {
       background-color: #D1D1D1; }
   #homepage #heroDots ul .slick-active button {
     background-color: #707070; }
+
+#sectionTwo {
+  background-color: #F0F0F0; }
 
 /*------------------------------------------------*/
 /*--------------------[FORMS]-------------------*/
