--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -17,7 +17,7 @@ html {
   scroll-behavior: smooth;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 	color: $maroon;
 	font-family: $pt-sans;
 }
@@ -72,21 +72,19 @@ a {
 /*-------------------[BUTTONS]--------------------*/
 /*------------------------------------------------*/
 
-.btn-primary {
+.maroon-button {
 	font-family: $pt-sans ;
 	text-transform: uppercase;
 	color: $white !important;
 	background-color: $maroon !important;
 	border: 0;
 	@include border-radius(5px);
-}
-			
-.btn-primary {
+	padding: 10px 25px;
 	&:hover {
-		background-color: lighten( $maroon, 10% ) !important;
+		background-color: darken( $maroon, 10% ) !important;
 		border: 0;
    	}
-  }
+}
 
 /*------------------------------------------------*/
 /*-------------------[GENERAL]--------------------*/
@@ -223,6 +221,10 @@ footer {
 			}
 		}
 	}
+}
+
+#sectionTwo {
+	background-color: #F0F0F0;
 }
 /*------------------------------------------------*/
 /*--------------------[FORMS]-------------------*/
