--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -104,6 +104,12 @@ a {
 	}	
 }
 
+.underlined {
+	padding-bottom: 15px;
+	border-bottom: 1px solid $maroon;
+	margin-bottom: 25px;
+}
+
 /*------------------------------------------------*/
 /*--------------------[HEADER]--------------------*/
 /*------------------------------------------------*/
@@ -221,11 +227,12 @@ footer {
 			}
 		}
 	}
+	#sectionTwo {
+		background-color: #F0F0F0;
+	}
 }
 
-#sectionTwo {
-	background-color: #F0F0F0;
-}
+
 /*------------------------------------------------*/
 /*--------------------[FORMS]-------------------*/
 /*------------------------------------------------*/
