--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -244,10 +244,10 @@ footer {
 	label {
 		font-family: $pt-sans;
 		font-weight: normal !important;
-		text-transform: uppercase;
+		color: #707070;
 	}
 	.ninja-forms-req-symbol, .nf-error-msg {
-		color: $maroon !important;
+		color: #707070 !important;
 	}
 	.nf-error-msg {
 		margin-bottom: 25px;
