--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10795,7 +10795,7 @@ html {
       html {
         font-size: 18px; } }
 
-h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5 {
   color: #6B0005;
   font-family: "PT Sans", sans-serif; }
 
