--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -17,7 +17,7 @@ html {
   scroll-behavior: smooth;
 }
 
-h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5 {
 	color: $maroon;
 	font-family: $pt-sans;
 }
